<resources>
    <string name="app_name">potentie-FeelsBook</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_stats">Stats</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="center_image_desc">Center graphic for looks only.</string>
    <string name="joy_emoji_desc">joy emoji</string>
    <string name="anger_emoji_desc">anger emoji</string>
    <string name="surprise_emoji_desc">surprise emoji</string>
    <string name="love_emoji_desc">love emoji</string>
    <string name="fear_emoji_desc">fear emoji</string>
    <string name="sadness_emoji_desc">sadness emoji</string>

    <string name="text_input">Enter a note to record with your emotion:</string>
    <string name="text_input_desc">text input for note</string>

    <string name="popup_icon_desc">Icon of mood you are editing</string>
    <string name="popup_edit_date">Edit date</string>
    <string name="popup_edit_note">Edit note</string>
    <string name="popup_edit_note_save">Save note</string>
    <string name="popup_delete">Delete Record</string>
    <string name="popup_exit">Button for closing popup</string>

</resources>
